--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Image Gallery</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
-        <header><img src="logo.png"></header>
-        <nav>
-            <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="About.html">About Photographer's</a></li>
-                <li><a href="Contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
+        <header>
+            <img src="logo.png">     
+            <nav>
+                <ul>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="Gallery.html">Gallery</a></li>
+                    <li><a href="About.html">About Photographer's</a></li>
+                    <li><a href="Contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </header>
         <section class="banner" id="banner">
             <div class="container">
                 
@@ -79,23 +81,6 @@
         <script src="https://code.jquery.com/jquery-3.6.0.js" 
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" 
         crossorigin="anonymous"></script>
-        <script type="text/javascript">
-         $(document).ready(function(){
-             $('.list').click(function(){
-                 const value = $(this).attr('data-filter');
-                 if(value == 'all'){
-                     $('.itemBox').show('1000');
-                 }
-                 else{
-                     $('.itemBox').not('.'+value).hide('1000');
-                     $('.itemBox').filter('.'+value).show('1000');
-                 }
-             })
-
-             $('.list').click(function(){
-                 $(this).addClass('active').siblings().removeClass('active');
-             })
-         })   
-    </script>
+        <script src="./js/app.js"></script>
     </body>
 </head>
