--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
         <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
-        <header>
-            <img src="logo.png">     
+
+        <header>     
             <nav>
+                <div class="icon-img">
+                    <img src="./resources/icons/logo.png">
+                </div>
                 <ul>
                     <li><a href="#" class="active">Home</a></li>
                     <li><a href="Gallery.html">Gallery</a></li>
@@ -17,9 +20,9 @@
                 </ul>
             </nav>
         </header>
+
         <section class="banner" id="banner">
-            <div class="container">
-                
+            <div class="container">  
             </div>
         </section>
 
