--- a/About.html
+++ b/About.html
@@ -25,7 +25,7 @@
         }
 
         body {
-            background-image: url(background.jpeg);
+            background-image: url(./resources/icons/background.jpeg);
             background-size: cover;
             background-repeat: no-repeat;
             background-position: bottom;
@@ -89,7 +89,7 @@
 
     <div class="center">
         <div class="avatar">
-            <img src="Binay.jpg" alt="face">
+            <img src="./resources/icons/Binay.jpg" alt="face">
         </div>
         <div class="content">
             <h1>Binay Shaw</h1>
