--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                     <img src="./resources/icons/logo.png">
                 </div>
                 <ul>
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="Gallery.html">Gallery</a></li>
-                    <li><a href="About.html">About Photographer's</a></li>
-                    <li><a href="Contact.html">Contact Us</a></li>
+                    <a href="#" class="active">Home</a>
+                    <a href="Gallery.html">Gallery</a>
+                    <a href="About.html">About Photographer's</a>
+                    <a href="Contact.html">Contact Us</a>
                 </ul>
             </nav>
         </header>
@@ -54,31 +54,31 @@
                 <li class="list" data-filter="animal">Animal</li>
             </ul>
             <div class="product">
-                <div class="itemBox macro"><img src="Macro.jpg"></div>
-                <div class="itemBox conceptclick"><img src="Concept Click.jpg"></div>
-                <div class="itemBox nature"><img src="Nature.jpg"></div>
-                <div class="itemBox lightpainting"><img src="LightPainting.jpg"></div>
-                <div class="itemBox animal"><img src="Animal1.jpg"></div>
-                <div class="itemBox macro"><img src="Macro1.jpg"></div>
-                <div class="itemBox conceptclick"><img src="Concept Click1.jpg"></div>
-                <div class="itemBox nature"><img src="Nature1.jpg"></div>
-                <div class="itemBox lightpainting"><img src="LightPainting1.jpg"></div>
-                <div class="itemBox macro"><img src="Macro2.jpg"></div>
-                <div class="itemBox conceptclick"><img src="Concept Click 2.jpg"></div>
-                <div class="itemBox nature"><img src="Nature2.jpg"></div>
-                <div class="itemBox lightpainting"><img src="LightPainting2.jpg"></div>
-                <div class="itemBox animal"><img src="Animal3.jpeg"></div>
-                <div class="itemBox macro"><img src="Macro3.jpg"></div>
-                <div class="itemBox conceptclick"><img src="Concept Click 3.jpg"></div>
-                <div class="itemBox nature"><img src="Nature3.jpg"></div>
-                <div class="itemBox lightpainting"><img src="LightPainting3.jpeg"></div>
-                <div class="itemBox animal"><img src="Animal4.jpeg"></div>
-                <div class="itemBox nature"><img src="Nature4.jpeg"></div>
-                <div class="itemBox nature"><img src="Nature5.jpeg"></div>
-                <div class="itemBox animal"><img src="Animal6.jpeg"></div>
-                <div class="itemBox nature"><img src="Nature6.jpeg"></div>
-                <div class="itemBox animal"><img src="Animal7.jpeg"></div>
-                <div class="itemBox nature"><img src="Nature7.jpeg"></div>
+                <div class="itemBox macro"><img src="./resources/img/Macro/Macro.jpg"></div>
+                <div class="itemBox conceptclick"><img src="./resources/img/ConceptClick/Concept Click.jpg"></div>
+                <div class="itemBox nature"><img src="./resources/img/Nature/Nature.jpg"></div>
+                <div class="itemBox lightpainting"><img src="./resources/img/LightPainting/LightPainting.jpg"></div>
+                <div class="itemBox animal"><img src="./resources/img/Animal/Animal1.jpg"></div>
+                <div class="itemBox macro"><img src="./resources/img/Macro/Macro1.jpg"></div>
+                <div class="itemBox conceptclick"><img src="./resources/img/ConceptClick/Concept Click1.jpg"></div>
+                <div class="itemBox nature"><img src="./resources/img/Nature/Nature1.jpg"></div>
+                <div class="itemBox lightpainting"><img src="./resources/img/LightPainting/LightPainting1.jpg"></div>
+                <div class="itemBox macro"><img src="./resources/img/Macro/Macro2.jpg"></div>
+                <div class="itemBox conceptclick"><img src="./resources/img/ConceptClick/Concept Click 2.jpg"></div>
+                <div class="itemBox nature"><img src="./resources/img/Nature/Nature2.jpg"></div>
+                <div class="itemBox lightpainting"><img src="./resources/img/LightPainting/LightPainting2.jpg"></div>
+                <div class="itemBox animal"><img src="./resources/img/Animal/Animal3.jpeg"></div>
+                <div class="itemBox macro"><img src="./resources/img/Macro/Macro3.jpg"></div>
+                <div class="itemBox conceptclick"><img src="./resources/img/ConceptClick/Concept Click 3.jpg"></div>
+                <div class="itemBox nature"><img src="./resources/img/Nature/Nature3.jpg"></div>
+                <div class="itemBox lightpainting"><img src="./resources/img/LightPainting/LightPainting3.jpeg"></div>
+                <div class="itemBox animal"><img src="./resources/img/Animal/Animal4.jpeg"></div>
+                <div class="itemBox nature"><img src="./resources/img/Nature/Nature4.jpeg"></div>
+                <div class="itemBox nature"><img src="./resources/img/Nature/Nature5.jpeg"></div>
+                <div class="itemBox animal"><img src="./resources/img/Animal/Animal6.jpeg"></div>
+                <div class="itemBox nature"><img src="./resources/img/Nature/Nature6.jpeg"></div>
+                <div class="itemBox animal"><img src="./resources/img/Animal/Animal7.jpeg"></div>
+                <div class="itemBox nature"><img src="./resources/img/Nature/Nature7.jpeg"></div>
             </div>
         </section>
         <script src="https://code.jquery.com/jquery-3.6.0.js" 
